# EuroScopeRenderPlugin

./: .gitignore  CMakeLists.txt  CONFIG.md  LICENSE  README.md  config.example.yaml  config.yaml  files.cmake  main.cpp  transform.py  vcpkg-configuration.json  vcpkg.json
include/: EuroScopePlugIn.h
src/plugin/: euroscope_render_definition.h  euroscope_render_plugin.cpp  euroscope_render_plugin.h
src/provider/: render_data_definition.hpp  render_data_provider.cpp  render_data_provider.h  render_data_yaml_provider.cpp  render_data_yaml_provider.h
src/render/: direct2d_render.cpp  direct2d_render.h  gdi_plus_render.cpp  gdi_plus_render.h  radar_render.cpp  radar_render.h  render.h
src/utils/: color_utils.cpp  color_utils.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h
